# zero-notebooklm

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  auth-row-remaining.md  clean-state-checklist.md  evaluator-rubric.md  feature_list.json  init.sh  notebooklm_bare.py  parity-audit-report.md  pyproject.toml  quality-document.md
compat/: auth_matrix.json  auth_row_evidence.json  cli_api_row_evidence.json  cli_surface.json  dependency_graph.json  notebooklm_py_0_7_2_oracle.json  parity_evidence.json  parity_matrix.md  parity_normalization.md  parity_rows.json  python_api_surface.json
docs/: integration.md
notebooklm/: __init__.py  __main__.py  _artifact_payloads.py  _artifacts_impl.py  _logging.py  _parity_runtime.py  agent_templates.py  artifacts.py  async_transport.py  auth.py  auth_readiness.py  browser_cookies.py  chat.py  cli.py  client.py  config.py  cookies.py  errors.py  exceptions.py  fake_rpc.py  http_std.py  interactive_login.py  io.py  lockfile.py  log.py  migration.py  notebooks.py  notes.py  offline_status.py  os_credentials.py  output.py  paths.py  profiles.py  research.py  rpc.py  self_test.py  sources.py  types.py  urls.py  utils.py
notebooklm_bare/: __init__.py  rpc.py
scripts/: _phase0_constants.py  api_behavior_parity_audit.py  auth_parity_evidence_audit.py  auth_row_evidence_report_builder.py  auth_row_promotion_apply.py  auth_row_promotion_audit.py  build_singlefile.py  build_wheel.py  cli_api_direct_differential.py  cli_api_parity_audit.py  cli_api_row_evidence_audit.py  import_origin_audit.py  (+15 more)
(+267 files in other folders)
